[gd_scene load_steps=2 format=3 uid="uid://b1umgopyfboxu"]

[ext_resource type="Script" path="res://Scenes/Main/Login/LoginScreen.gd" id="1_dgugm"]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( "1_dgugm" )

[node name="MainLoginWindow" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainLoginWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -66.5
offset_right = 93.0
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = false

[node name="Username" type="LineEdit" parent="MainLoginWindow/VBoxContainer"]
offset_right = 186.0
offset_bottom = 31.0
text = "user1"

[node name="Password" type="LineEdit" parent="MainLoginWindow/VBoxContainer"]
offset_top = 35.0
offset_right = 186.0
offset_bottom = 66.0
text = "1234"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainLoginWindow/VBoxContainer"]
offset_top = 70.0
offset_right = 186.0
offset_bottom = 101.0

[node name="Login" type="Button" parent="MainLoginWindow/VBoxContainer/HBoxContainer"]
offset_right = 91.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Login"

[node name="Register" type="Button" parent="MainLoginWindow/VBoxContainer/HBoxContainer"]
offset_left = 95.0
offset_right = 186.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Register"

[node name="Opine" type="Label" parent="MainLoginWindow/VBoxContainer" groups=["Opine"]]
offset_top = 105.0
offset_right = 186.0
offset_bottom = 128.0

[connection signal="pressed" from="MainLoginWindow/VBoxContainer/HBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="MainLoginWindow/VBoxContainer/HBoxContainer/Register" to="." method="_on_register_pressed"]
